fixes for multiple ways of creating javafx app